# review-intelligence-engine

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: customer_routes.py  routes.py
app/core/: config.py
app/models/: schemas.py
app/services/: analyzer.py  comparator.py  customer_insights.py  insights.py  llm_client.py  product_search.py  scraper.py  url_normalizer.py
app/ui/: app.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  CustomerApp.jsx  LandingApp.jsx  api.js  index.css  main.jsx
